# modgen

./: Cargo.toml  changelog  modgen.toml  readme
src/: cli.rs  config.rs  fs_utils.rs  generator.rs  logging.rs  main.rs  scanner.rs
